<resources>
    <string name="app_name">TrimFit App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_up_your_profile">Set Up Your Profile</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday">Birthday</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="_70_kg">70 kg</string>
    <string name="_173_sm">173 sm</string>
    <string name="weight_format">Weight: %d kg</string>
    <string name="height_format">%d cm</string>
    <string name="steps_format">%d steps</string>
    <string name="activity_goal">Activity goal</string>
    <string name="_8000_steps_day">8000 steps / day</string>
    <string name="weight_goal">Weight goal</string>
    <string name="goal_by_weight">40kg / 150kg</string>
    <string name="min50_max200">Please enter a weight between 50 kg and 200 kg</string>
    <string name="next">Next</string>
    <string name="enter_goal_weight">Enter Goal Weight</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="select_steps">Select Steps</string>
    <string name="select_weight">Select Weight</string>
    <string name="select_height">Select Height</string>
    <string name="request">Please provide all the required data</string>
    <string name="set_weight_goal">Set Weight Goal</string>
    <string name="activity">Activity</string>
    <string name="profile">Profile</string>
    <string name="long_tap_to_reset_steps">Long tap to reset steps</string>
    <string name="no_sensor_detected_on_this_device">No sensor detected on this device</string>
    <string name="test">test test test</string>
    <string name="calories_burned">Calories burned:</string>
    <string name="distance_traveled">Distance traveled:</string>
    <string name="metres"> metres</string>
    <string name="your_birthday">Your birthday</string>
    <string name="current_weight">Current weight</string>
    <string name="your_height">Your height</string>
    <string name="goal_weight">Goal weight</string>
    <string name="goal_steps">Goal steps</string>
    <string name="current_steps">Current steps</string>
    <string name="_12_12_2023">12.12.2023</string>
    <string name="steps">" steps"</string>
</resources>