<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".presentation.fragments.FirstFragment">

    <TextView
        android:id="@+id/tv_setup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/set_up_your_profile"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20sp"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_setup">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_gender_choose"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:id="@+id/gender_text"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:hint="@string/male"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/gender_icon"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_gravity="end|center_vertical"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/ic_gender_icon" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:id="@+id/tv_birthday"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:hint="@string/_12_12_2023"
                        android:inputType="date"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/birthday_icon"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_gravity="end|center_vertical"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/ic_gender_icon" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_kg"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:id="@+id/tv_kg"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:hint="@string/_70_kg"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/kg_img"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_gravity="end|center_vertical"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/ic_gender_icon" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:id="@+id/tv_height"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:hint="@string/_173_sm"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/height_img"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_gravity="end|center_vertical"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/ic_gender_icon" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_goal"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/steps_by_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:hint="@string/_8000_steps_day"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/steps_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_gender_icon" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_goal"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/tv_goal_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:hint="@string/goal_by_weight"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/goal_weight_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_gender_icon" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_back"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>